--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "js-atafxq",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@liff/is-api-available": "^2.19.0",
+    "@line/liff": "2.19.0",
+    "tslib": "^2.3.0"
+  }
 }
